[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "milib-ejemplo"
version = "0.0.1"
description = "Una librería de prueba para Nexus"
authors = [{ name = "Tu Nombre", email = "tuemail@ejemplo.com" }]
requires-python = ">=3.6"
dependencies = []